@@ -1,3 +1,7 @@
+(02/04/20)
+==========
+
+· Updated Spectrum emulator unrealspeccy to 0.86.11
 
 (08/03/20)
 ==========
